<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="no_data">No Data</string>
    <string name="app_logo">app logo</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="use_my_location">Use My Location</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="my_representatives">My Representatives</string>
    <string name="representative_search">Representative Search</string>
    <string name="settings">Settings</string>
    <string name="permission_denied_explanation">
        You need to grant location permission at the all time in order to use your location.
    </string>
    <string name="location_required_error">Location services must be enabled.</string>
    <string name="ok">OK</string>
    <string name="location_error">You are not in US</string>
    <string name="location_not_found">Location not found</string>
    <string name="profile">Profile</string>
    <string name="election_information">Election Information</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="mailing_address">Mailing Address</string>
    <string name="browser">browser</string>
    <string name="facebook">facebook</string>
    <string name="twitter">twitter</string>
    <string name="network_connection_error">network connection error</string>
    <string name="check_conn">Please check your internet connection</string>

</resources>