<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.udacity.politicalpreparedness.data.domain.Representative" />

        <variable
            name="clickListener"
            type="com.udacity.politicalpreparedness.domain.representative.RepresentativeListAdapter.RepresentativeListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profile_imageview"
            android:layout_width="@dimen/profileImageSize"
            android:layout_height="@dimen/profileImageSize"
            android:contentDescription="@string/profile"
            app:imageUrl="@{item.official.photoUrl}"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars"
            android:layout_marginVertical="@dimen/spacing_4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/textView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@{item.office.name}"
            android:layout_marginStart="@dimen/spacing_4dp"
            app:layout_constraintStart_toEndOf="@id/profile_imageview"
            app:layout_constraintTop_toTopOf="@id/profile_imageview" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{item.official.name}"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{item.official.party}"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


        <ImageView
            android:id="@+id/www_image"
            android:layout_width="@dimen/socialImageSize"
            android:layout_height="@dimen/socialImageSize"
            android:padding="@dimen/spacing_8dp"
            android:src="@drawable/ic_www"
            android:contentDescription="@string/browser"
            app:layout_constraintBottom_toBottomOf="@+id/twitter_image"
            app:layout_constraintEnd_toStartOf="@+id/facebook_image"
            app:layout_constraintTop_toTopOf="@+id/twitter_image" />

        <ImageView
            android:id="@+id/facebook_image"
            android:layout_width="@dimen/socialImageSize"
            android:layout_height="@dimen/socialImageSize"
            android:padding="@dimen/spacing_8dp"
            android:contentDescription="@string/facebook"
            android:src="@drawable/ic_facebook"
            app:layout_constraintBottom_toBottomOf="@+id/twitter_image"
            app:layout_constraintEnd_toStartOf="@+id/twitter_image"
            app:layout_constraintTop_toTopOf="@+id/twitter_image" />

        <ImageView
            android:id="@+id/twitter_image"
            android:layout_width="@dimen/socialImageSize"
            android:layout_height="@dimen/socialImageSize"
            android:padding="@dimen/spacing_8dp"
            android:contentDescription="@string/twitter"
            android:src="@drawable/ic_twitter"
            app:layout_constraintBottom_toBottomOf="@+id/profile_imageview"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>