<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="androidx.core.content.ContextCompat" />
        <variable
            name="viewModel"
            type="com.udacity.politicalpreparedness.domain.elections.ElectionsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/spacing_8dp">

        <TextView
            android:id="@+id/label_selection_text_view"
            style="@style/Widget.PoliticalPreparedness.HeaderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_elections"
            android:paddingVertical="@dimen/spacing_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/elections_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/label_selection_text_view"
            tools:itemCount="3"
            tools:listitem="@layout/item_election" />

        <TextView
            android:id="@+id/label_saved_selection_text_view"
            style="@style/Widget.PoliticalPreparedness.HeaderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saved_elections"
            android:paddingVertical="@dimen/spacing_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/elections_recycler_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/saved_elections_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/label_saved_selection_text_view"
            tools:itemCount="3"
            tools:listitem="@layout/item_election" />


        <TextView
            android:id="@+id/no_data_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_data"
            android:fontFamily="sans-serif-medium"
            android:textSize="@dimen/text_size_large"
            app:fadeVisible="@{viewModel.empty}"
            app:drawableTopCompat="@drawable/ic_no_data"
            app:layout_constraintBottom_toBottomOf="@+id/elections_recycler_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_connection_error"
            app:fadeVisible="@{!viewModel.isInternetAvailable}"
            android:contentDescription="@string/network_connection_error"
            app:layout_constraintStart_toStartOf="@id/no_data_text_view"
            app:layout_constraintEnd_toEndOf="@id/no_data_text_view"
            app:layout_constraintTop_toTopOf="@id/no_data_text_view"
            app:layout_constraintBottom_toBottomOf="@id/no_data_text_view"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:fadeVisible="@{viewModel.dataLoading}"
            app:layout_constraintBottom_toBottomOf="@+id/no_data_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/no_data_text_view" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>