<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.politicalpreparedness.domain.voterinfo.VoterInfoViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/no_data_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/spacing_8dp"
            android:paddingVertical="@dimen/spacing_8dp"
            app:fadeVisible="@{!viewModel.isDataAvailable}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:fadeVisible="@{viewModel.dataLoading}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/data_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:fadeVisible="@{viewModel.isDataAvailable}">

            <TextView
                android:id="@+id/election_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimaryVariant"
                android:padding="@dimen/spacing_16dp"
                android:singleLine="true"
                android:text="@{viewModel.voterInfo.election.name}"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/election_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_8dp"
                android:text="@{viewModel.voterInfo.election.electionDay.toString()}"
                app:layout_constraintTop_toBottomOf="@id/election_name"
                tools:text="12 November 2055" />

            <TextView
                android:id="@+id/state_header"
                style="@style/Widget.PoliticalPreparedness.HeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_16dp"
                android:paddingVertical="0dp"
                android:text="@string/election_information"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@id/election_date"
                app:layout_constraintTop_toBottomOf="@id/election_date" />

            <TextView
                android:id="@+id/state_locations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.openVotingLocationFinder()}"
                android:padding="@dimen/spacing_4dp"
                android:text="@string/voting_locations"
                app:layout_constraintStart_toStartOf="@id/election_date"
                app:layout_constraintTop_toBottomOf="@id/state_header" />

            <TextView
                android:id="@+id/state_ballot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.openBallotInfo()}"
                android:padding="@dimen/spacing_4dp"
                android:text="@string/ballot_information"
                app:layout_constraintStart_toStartOf="@id/election_date"
                app:layout_constraintTop_toBottomOf="@id/state_locations" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/address_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_16dp"
                android:visibility="gone"
                app:constraint_referenced_ids="state_correspondence_header,address" />

            <TextView
                android:id="@+id/state_correspondence_header"
                style="@style/Widget.PoliticalPreparedness.HeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_16dp"
                android:paddingVertical="0dp"
                android:text="@string/mailing_address"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@id/election_date"
                app:layout_constraintTop_toBottomOf="@id/state_ballot" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/election_date"
                app:layout_constraintTop_toBottomOf="@id/state_correspondence_header" />

            <Button
                android:id="@+id/save_election_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_16dp"
                android:layout_marginBottom="@dimen/spacing_16dp"
                android:onClick="@{() -> viewModel.changeFollowingVoterInfo()}"
                android:text="@{context.getString(viewModel.isSavedResourceInt)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>